Squashed 'drawiobatch/drawio/' changes from 85d5dfff..c08887dc
c1c8248f 7.8.7 release
1113005b Desktop changes
6e5a1429 Updated version
0a8b0bf6 Try again dialog if offline in setup
e1fbd48b 7.8.6 release
9c48956a 7.8.5 release

git-subtree-dir: drawiobatch/drawio
git-subtree-split: c08887dc831b6f62fa039970801d26c84dc99a13

--- a/war/index.html
+++ b/war/index.html
@@ -358,7 +358,7 @@
 		{
 			mxscript('js/app.min.js');
 			
-			if (urlParams['offline'] == '1')
+			if (urlParams['offline'] == '1' || urlParams['appcache'] == '1')
 			{
 				mxscript('js/stencils.min.js');
 			}
