Squashed 'drawiobatch/drawio/' changes from 3e1c341b..ac04da25
96874030 8.2.2 release
169f2b1a 8.2.1 release
dc501036 Updated supported browsers
7998a4c3 8.1.6 release
d4826a27 8.1.5 release
0c002b8c 8.1.4 release
b98a33fc 8.1.3 release
c58969fb 8.1.2 release
46eebc76 8.1.1 release
ad0383dd 8.1.0 release
ccb881dc 8.0.9 release
850e813d 8.0.8 release
59d9f0cd 8.0.7 release
8fc5fa7f 8.0.6 release

git-subtree-dir: drawiobatch/drawio
git-subtree-split: ac04da255b868c1f87a8ff594a05da9a93aab023

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -198,20 +198,13 @@
 		}
 		.geFooterContainer div.geSocialFooter a img {
 			margin-top:10px;
-			opacity:0.8;
+			opacity:0.5;
 		}
 		.geFooterContainer div.geSocialFooter a img:hover {
 			opacity:1;
 		}
-		#geFooterItem1 {
-			background-color: #cdcdcd;
-		}
-		#geFooterItem1:hover {
-			background-color: #b0b0b0;
-		}		
-		.geFooterContainer>div>img {
+		.geFooterContainer>div#geFooter>img {
 			opacity:0.5;
-			background:#e5e5e5;
 			border:1px solid transparent;
 			cusor:pointer;
 			margin-top:3px;
@@ -222,7 +215,7 @@
 			padding:1px;
 			cursor:pointer;
 		}
-		.geFooterContainer>div>img:hover {
+		.geFooterContainer>div#geFooter>img:hover {
 			opacity: 1;
 		}
 	</style>
@@ -243,9 +236,9 @@
 		/**
 		 * Synchronously adds scripts to the page.
 		 */
-		function mxscript(src, onLoad, id, dataAppKey)
+		function mxscript(src, onLoad, id, dataAppKey, noWrite)
 		{
-			if (onLoad != null)
+			if (onLoad != null || noWrite)
 			{
 				var s = document.createElement('script');
 				s.setAttribute('type', 'text/javascript');
@@ -262,14 +255,17 @@
 					s.setAttribute('data-app-key', dataAppKey);
 				}
 				
-				s.onload = s.onreadystatechange = function()
+				if (onLoad != null)
 				{
-					if (!r && (!this.readyState || this.readyState == 'complete'))
+					s.onload = s.onreadystatechange = function()
 					{
-			      		r = true;
-			      		onLoad();
-					}
-			  	};
+						if (!r && (!this.readyState || this.readyState == 'complete'))
+						{
+				      		r = true;
+				      		onLoad();
+						}
+				  	};
+				}
 			  	
 			  	var t = document.getElementsByTagName('script')[0];
 			  	t.parentNode.insertBefore(s, t);
@@ -341,18 +337,12 @@
 		else
 		{
 			mxscript('js/app.min.js');
-			
-			if (urlParams['offline'] == '1' || urlParams['appcache'] == '1')
-			{
-				mxscript('js/stencils.min.js');
-			}
 		}
 
+		// Electron
 		if (window && window.process && window.process.type)
 		{
-			// Electron
 			mxscript('js/diagramly/ElectronApp.js');
-			mxscript('js/diagramly/Extensions.js');
 		}
 		
 		// Adds basic error handling
@@ -401,12 +391,12 @@
 	</div>
 	<table align="center" height="100%">
 		<tr>
-			<td id="geFooterItem2" align="center" style="width:246px;">
+			<td id="geFooterItem2" align="center" style="width:280px;transition: all 1s ease;">
 				<a title="Quick Start Video" href="https://www.youtube.com/watch?v=Z0D96ZikMkc" target="_blank">
-					<img border="0" align="absmiddle" style="margin-top:-2px;padding-right:8px;"
-						width="26" height="26" src="images/youtube.png"/>Quick Start Video</a>
+					<img border="0" align="absmiddle" style="margin-top:-4px;padding-right:10px;"
+						width="26" height="20" src="images/youtube.png"/>Quick Start Video</a>
 			</td>
-			<td id="geFooterItem1" align="center" style="width:282px;">
+			<td id="geFooterItem1" align="center" style="width:260px;">
 				<a id="geFooterLink1" title="#1 Rated Confluence Add-on" target="_blank"
 					href="https://about.draw.io/integrations/confluence-integration/">
 					<img border="0" width="24" height="24" align="absmiddle" style="padding-right:10px;"
